--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.activity:activity-ktx:1.1.0'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.4'
