--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "com.petertackage.fibonacci"
+        applicationId "com.petertackage.demo"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
